2006-05-06  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-dir.c: (dir_sync): Fix a potential use after free
	reported by the coverity checker - #1239. Closes bug #338196.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:
	* gconf/Makefile.am:
	* gconf/gconf-sanity-check.c: (main):
	* gconf/gconftool.c: (main):
	Migrate to GOption. Patch by Vincent Vuntz. Closes
	bug #336307.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Reinstate the previous patch.
	* po/LINGUAS: Same.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Revert the LINGUAS patch until we have branched.
	* po/LINGUAS: Remove temporarily.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (read_current_server): Fix a
	NULL pointer deref reported by Coverity. Patch from Pascal
	Terjan. Closes bug #338617.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Move to the new LINGUAS handling.
	* po/LINGUAS: Patch from Luis Menina. Closes bug #338036.

2006-05-05  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.in: Fix staged installation if sysconfdir is overriden
	from the command line. Closes bug #336019.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/gconf/gconf-sections.txt: Add GConfSchema functions.
	* doc/gconf/tmpl/gconf-schema.sgml: Add docs for GConfSchema.
	Patch from <kaiw at itee.uq.edu.au>. Closes bug #147758.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-changeset.h:
	* gconf/gconf-client.h:
	* gconf/gconf-database.h:
	* gconf/gconf-engine.h:
	* gconf/gconf-error.h:
	* gconf/gconf-listeners.h:
	* gconf/gconf-locale.h:
	* gconf/gconf-schema.h:
	* gconf/gconf-value.h:
	* gconf/gconf.h:
	* gconf/gconfd.h: Use G_BEGIN/END_DECLS instead
	of a lot of #ifdef __cplusplus stuff. Closes bug 306313.
	Patch from Fabrício Barros Cebral.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/markup-tree.c: (parse_value_element):