@@ -198,7 +198,6 @@ AC_CHECK_HEADER(ldap.h, [
 AC_SUBST(LDAP_LIBS)
 AM_CONDITIONAL(LDAP_SUPPORT, test -n "$LDAP_LIBS")
 
-AC_SUBST([CONFIG_STATUS_DEPENDENCIES],['$(top_srcdir)/po/LINGUAS'])
 IT_PROG_INTLTOOL([0.34.90])
 
 AM_GLIB_GNU_GETTEXT
