@@ -1,3 +1,10 @@
+2006-05-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Makefile.am: Add intltool files to EXTRA_DIST and
+	DISTCLEANFILES.
+	* autogen.sh: Run intltoolize.
+	* configure.in: Fix the po/LINGUAS stuff.
+
 2006-05-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* backends/xml-dir.c: (dir_sync): Fix a potential use after free
